Update project and docs
